--- a/css/fluid.css
+++ b/css/fluid.css
@@ -1,12 +1,16 @@
 /* -------------------------------------------------------
-
-  Centurion Framework v.3.1 - FLUID
-	Created by: Justin Hough
-
-	Documentation: http://jhough10.github.com/Centurion/documentation.html
-  Licensed under GPL and MIT.
-
--------------------------------------------------------- */
+ *
+ *
+ *
+ * Centurion Framework v.3.1 - FLUID
+ *
+ * Created by: Justin Hough
+ *
+ *
+ *
+ * Documentation: http://jhough10.github.com/Centurion/documentation.html
+ *
+ * Licensed under GPL and MIT. */
 /* Desktop/Tablet Fluid Grid Layout - 92% */
 .container {
   width: 92%;
