--- a/sass/fluid.sass
+++ b/sass/fluid.sass
@@ -1,18 +1,18 @@
-@import "core/base";
+@import "core/base"
 /* -------------------------------------------------------
-
-  Centurion Framework v.3.1 - FLUID
+	
+	Centurion Framework v.3.1 - FLUID
 	Created by: Justin Hough
 
 	Documentation: http://jhough10.github.com/Centurion/documentation.html
-  Licensed under GPL and MIT.
-
--------------------------------------------------------- */
+	Licensed under GPL and MIT.
+	
+// -------------------------------------------------------- */
 
 /* Desktop/Tablet Fluid Grid Layout - 92% */
-@include fluid;
+@include fluid
 
-@include centerGrid;
+@include centerGrid
 
 /* Clearfix */
-@include clearfix;
+@include clearfix
