--- a/css/centurion.css
+++ b/css/centurion.css
@@ -1,10 +1,12 @@
-/* -------------------------------------------------------
+/* --------------------------------------------------------
  *
- * Centurion Framework v 3.1
- * Created by: Justin Hough
+ *  Centurion Framework v 3.1
+ *  Created by: Justin Hough
  *
- * Documentation: http://jhough10.github.com/Centurion/documentation.html
- * Licensed under GPL and MIT. */
+ *  Documentation: http://jhough10.github.com/Centurion/documentation.html
+ *  Licensed under GPL and MIT.
+ *
+ * -------------------------------------------------------- */
 .hide-desktop {
   display: none;
 }
@@ -25,6 +27,7 @@
   float: left;
   margin-left: 10px;
   margin-right: 10px;
+  position: relative;
 }
 .container .centerGrid {
   display: block;
@@ -37,6 +40,10 @@
 }
 .container .omega {
   margin-right: 0;
+}
+.container [class*="push-"],
+.container [class*="pull-"] {
+  position: relative;
 }
 .container .grid-1 {
   width: 60px;
@@ -73,10 +80,6 @@
 }
 .container .grid-12 {
   width: 940px;
-}
-.container [class*="pull-"],
-.container [class*="push-"] {
-  position: relative;
 }
 .container .pull-1 {
   left: -80px;
@@ -151,12 +154,159 @@
   left: 960px;
 }
 
+.container [class*="mobile-"] {
+  box-sizing: border-box;
+  float: left;
+  padding: 0 5px;
+}
+.container .alpha {
+  padding-left: 0;
+}
+.container .omega {
+  padding-right: 0;
+}
+.container .mobile-25 {
+  width: 25%;
+}
+.container [class*="mobile-"].pull-25 {
+  left: -25%;
+}
+.container [class*="mobile-"].push-25 {
+  left: 25%;
+}
+.container .mobile-50 {
+  width: 50%;
+}
+.container [class*="mobile-"].pull-50 {
+  left: -50%;
+}
+.container [class*="mobile-"].push-50 {
+  left: 50%;
+}
+.container .mobile-75 {
+  width: 75%;
+}
+.container [class*="mobile-"].pull-75 {
+  left: -75%;
+}
+.container [class*="mobile-"].push-75 {
+  left: 75%;
+}
+.container .mobile-33 {
+  width: 33.33333%;
+}
+.container [class*="mobile-"].pull-33 {
+  left: -33.33333%;
+}
+.container [class*="mobile-"].push-33 {
+  left: 33.33333%;
+}
+.container .mobile-66 {
+  width: 66.66667%;
+}
+.container [class*="mobile-"].pull-66 {
+  left: -66.66667%;
+}
+.container [class*="mobile-"].push-66 {
+  left: 66.66667%;
+}
+.container .mobile-10 {
+  width: 10%;
+}
+.container [class*="mobile-"].pull-10 {
+  left: -10%;
+}
+.container [class*="mobile-"].push-10 {
+  left: 10%;
+}
+.container .mobile-20 {
+  width: 20%;
+}
+.container [class*="mobile-"].pull-20 {
+  left: -20%;
+}
+.container [class*="mobile-"].push-20 {
+  left: 20%;
+}
+.container .mobile-30 {
+  width: 30%;
+}
+.container [class*="mobile-"].pull-30 {
+  left: -30%;
+}
+.container [class*="mobile-"].push-30 {
+  left: 30%;
+}
+.container .mobile-40 {
+  width: 40%;
+}
+.container [class*="mobile-"].pull-40 {
+  left: -40%;
+}
+.container [class*="mobile-"].push-40 {
+  left: 40%;
+}
+.container .mobile-50 {
+  width: 50%;
+}
+.container [class*="mobile-"].pull-50 {
+  left: -50%;
+}
+.container [class*="mobile-"].push-50 {
+  left: 50%;
+}
+.container .mobile-60 {
+  width: 60%;
+}
+.container [class*="mobile-"].pull-60 {
+  left: -60%;
+}
+.container [class*="mobile-"].push-60 {
+  left: 60%;
+}
+.container .mobile-70 {
+  width: 70%;
+}
+.container [class*="mobile-"].pull-70 {
+  left: -70%;
+}
+.container [class*="mobile-"].push-70 {
+  left: 70%;
+}
+.container .mobile-80 {
+  width: 80%;
+}
+.container [class*="mobile-"].pull-80 {
+  left: -80%;
+}
+.container [class*="mobile-"].push-80 {
+  left: 80%;
+}
+.container .mobile-90 {
+  width: 90%;
+}
+.container [class*="mobile-"].pull-90 {
+  left: -90%;
+}
+.container [class*="mobile-"].push-90 {
+  left: 90%;
+}
+.container .mobile-100 {
+  width: 100%;
+}
+.container [class*="mobile-"].pull-100 {
+  left: -100%;
+}
+.container [class*="mobile-"].push-100 {
+  left: 100%;
+}
+
 /* Tablet Fluid Grid Layout - 92% */
 @media only screen and (min-width: 521px) and (max-width: 920px) {
   .container {
-    width: 92%;
-    margin-left: 4%;
-    margin-right: 4%;
+    width: 96%;
+    margin-left: auto;
+    margin-right: auto;
   }
   .container [class*="grid-"] {
     display: inline;
@@ -177,134 +327,132 @@
   .container .omega {
     margin-right: 0;
   }
+  .container [class*="push-"],
+  .container [class*="pull-"] {
+    position: relative;
+  }
   .container .grid-1 {
-    width: 6.33333%;
+    width: 6%;
   }
   .container .grid-2 {
-    width: 14.66667%;
+    width: 14%;
   }
   .container .grid-3 {
-    width: 23%;
+    width: 22%;
   }
   .container .grid-4 {
-    width: 31.33333%;
+    width: 30%;
   }
   .container .grid-5 {
-    width: 39.66667%;
+    width: 38%;
   }
   .container .grid-6 {
-    width: 48%;
+    width: 46%;
   }
   .container .grid-7 {
-    width: 56.33333%;
+    width: 54%;
   }
   .container .grid-8 {
-    width: 64.66667%;
+    width: 62%;
   }
   .container .grid-9 {
-    width: 73%;
+    width: 70%;
   }
   .container .grid-10 {
-    width: 81.33333%;
+    width: 78%;
   }
   .container .grid-11 {
-    width: 89.66667%;
+    width: 86%;
   }
   .container .grid-12 {
-    width: 98%;
+    width: 94%;
   }
   .container .pull-1 {
-    left: -8.33333%;
+    left: -8%;
   }
   .container .pull-2 {
-    left: -16.66667%;
+    left: -16%;
   }
   .container .pull-3 {
-    left: -25%;
+    left: -24%;
   }
   .container .pull-4 {
-    left: -33.33333%;
+    left: -32%;
   }
   .container .pull-5 {
-    left: -41.66667%;
+    left: -40%;
   }
   .container .pull-6 {
-    left: -50%;
+    left: -48%;
   }
   .container .pull-7 {
-    left: -58.33333%;
+    left: -56%;
   }
   .container .pull-8 {
-    left: -66.66667%;
+    left: -64%;
   }
   .container .pull-9 {
-    left: -75%;
+    left: -72%;
   }
   .container .pull-10 {
-    left: -83.33333%;
+    left: -80%;
   }
   .container .pull-11 {
-    left: -91.66667%;
+    left: -88%;
   }
   .container .pull-12 {
-    left: -100%;
+    left: -96%;
   }
   .container .push-1 {
-    left: 8.33333%;
+    left: 8%;
   }
   .container .push-2 {
-    left: 16.66667%;
+    left: 16%;
   }
   .container .push-3 {
-    left: 25%;
+    left: 24%;
   }
   .container .push-4 {
-    left: 33.33333%;
+    left: 32%;
   }
   .container .push-5 {
-    left: 41.66667%;
+    left: 40%;
   }
   .container .push-6 {
-    left: 50%;
+    left: 48%;
   }
   .container .push-7 {
-    left: 58.33333%;
+    left: 56%;
   }
   .container .push-8 {
-    left: 66.66667%;
+    left: 64%;
   }
   .container .push-9 {
-    left: 75%;
+    left: 72%;
   }
   .container .push-10 {
-    left: 83.33333%;
+    left: 80%;
   }
   .container .push-11 {
-    left: 91.66667%;
+    left: 88%;
   }
   .container .push-12 {
-    left: 100%;
+    left: 96%;
   }
 }
 /* Mobile Grid Layout - 320px and 480px */
 @media screen and (min-width: 320px) and (max-width: 520px) {
-  #wrapper {
-    margin-left: auto;
-    margin-right: auto;
-    width: 92%;
-  }
-
   .container {
-    width: 92%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
   }
   .container [class*="grid-"] {
     display: inline;
     float: left;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
+    margin-left: 2%;
+    margin-right: 2%;
+    width: 96%;
   }
   .container .centerGrid {
     display: block;
@@ -360,7 +508,6 @@
     display: none;
   }
 }
-/* Grid Create - Custom Grid */
 /* Centering Grid */
 .centerGrid {
   display: block;
