--- a/sass/centurion.sass
+++ b/sass/centurion.sass
@@ -1,13 +1,13 @@
 @import "core/base"
-/* -------------------------------------------------------
-
-  Centurion Framework v 3.1
-  Created by: Justin Hough
-
-  Documentation: http://jhough10.github.com/Centurion/documentation.html
-  Licensed under GPL and MIT.
-
-//-------------------------------------------------------- */
+/* --------------------------------------------------------
+ *
+ *  Centurion Framework v 3.1
+ *  Created by: Justin Hough
+ *
+ *  Documentation: http://jhough10.github.com/Centurion/documentation.html
+ *  Licensed under GPL and MIT.
+ *
+ * -------------------------------------------------------- */
 
 @include hide-desktop
 
@@ -25,10 +25,6 @@
   @include navigation-mobile
   @include hide-mobile
 
-
-/* Grid Create - Custom Grid */
-//@include gridCreate(1120px,20px,16)
-//@include gridCreate(92%,2%,16)
 
 /* Centering Grid */
 @include centerGrid
