--- a/sass/core/_grid.sass
+++ b/sass/core/_grid.sass
@@ -12,10 +12,10 @@
       visibility: hidden
       clear: both
       zoom: 1
-    
+
     * html &
       height: 1px
-  
+
   .clear
     clear: both
     display: block
@@ -35,12 +35,20 @@
     margin-right: auto
 
 
-// Alpha and Omega - for Nested Grids
+
+// Alpha and Omega
 @mixin first-last
   .alpha
     margin-left: 0
   .omega
     margin-right: 0
+
+@mixin first-last-mobile
+  .alpha
+    padding-left: 0
+  .omega
+    padding-right: 0
+
 
 // Show and Hide Elements within Grid
 @mixin hide-desktop
@@ -64,7 +72,6 @@
     display: block
 
 
-
 // Desktop Grid Generator
 //@include grid-generator(960px, 20px, 12)
 @mixin grid-generator($width, $space, $rows: 12)
@@ -77,108 +84,111 @@
       @include float-left
       margin-left: $space/2
       margin-right: $space/2
-    
+      position: relative
+
     @include centerGrid
     @include first-last
+
+    [class*="push-"],
+    [class*="pull-"]
+      position: relative
 
     @for $i from 1 through $rows
       .grid-#{$i}
         width: $content-width/($rows/$i) - $space
-    
-    [class*="pull-"],
-    [class*="push-"]
-      position: relative
-    
+
     @for $i from 1 through $rows
       .pull-#{$i}
         left: -($content-width/($rows/$i))
-        
+
     @for $i from 1 through $rows
       .push-#{$i}
         left: $content-width/($rows/$i)
 
 
-@mixin grid-fluid-generator($width, $space, $rows: 12)
-  $content-width: $width
+
+// Nested Grid Generator
+@mixin grid-nested-generator($rows: 10)
 
   .container
-    width: $content-width
-    margin-left: $space*2
-    margin-right: $space*2
-    [class*="grid-"]
-      display: inline
+    [class*="mobile-"]
+      box-sizing: border-box
       @include float-left
-      margin-left: $space/2
-      margin-right: $space/2
-      position: relative
-  
-    @include centerGrid
-    @include first-last
+      padding: 0 5px
 
-    $fluid-grid-width: 100%
-    //$fluid-spacing: ($space)*2
+    @include first-last-mobile
+
+    @for $i from 1 through 3
+      $num: $i * 25
+
+      .mobile-#{$num}
+        width: 1% * $num
+      [class*="mobile-"].pull-#{$num}
+        left: -(1% * $num)
+      [class*="mobile-"].push-#{$num}
+        left: (1% * $num)
+
+    @for $i from 1 through 2
+      $num: $i * 33
+      $mul: 1/3
+      $decimal: $i * $mul
+      $percent: ($num + $decimal)
+
+      .mobile-#{$num}
+        width: 1% * $percent
+      [class*="mobile-"].pull-#{$num}
+        left: -(1% * $percent)
+      [class*="mobile-"].push-#{$num}
+        left: (1% * $percent)
 
     @for $i from 1 through $rows
-      .grid-#{$i}
-        width: $fluid-grid-width/($rows/$i) - ($space)
-
-    @for $i from 1 through $rows
-      .pull-#{$i}
-        left: -($fluid-grid-width/($rows/$i))
-
-    @for $i from 1 through $rows
-      .push-#{$i}
-        left: $fluid-grid-width/($rows/$i)
-
+      $num: $i * 10
+      .mobile-#{$num}
+        width: 1% * $num
+      [class*="mobile-"].pull-#{$num}
+        left: -(1% * $num)
+      [class*="mobile-"].push-#{$num}
+        left: (1% * $num)
 
 
 // Mobile Grid Generator - NO PUSH OR PULL
-//@include grid-generator(480px, 20px, 12)
-@mixin grid-generator-mobile($width: 92%, $space: 4%, $rows: 12)
-  $content-width: $width
-  $grid-width: 98%
-  $spacing: $space
-  #wrapper
-    @include auto-center
-    width: $width
-
+// @include grid-generator(480px, 20px, 12)
+@mixin grid-generator-mobile ($width: 100%, $space: 2%)
+  $grid-width: 96%
   .container
-    width: $content-width
+    width: $width
     @include auto-center
-    
     [class*="grid-"]
       display: inline
       @include float-left
-      margin-left: auto
-      margin-right: auto
-      width: $grid-width + ($space * 2) - 2
-         
+      margin-left: $space
+      margin-right: $space
+      width: $grid-width
     @include centerGrid
     @include first-last
-
     [class*="pull-"],
     [class*="push-"]
       left: 0
 
 
+
+
+
 // Fixed Grid Generator - with custom create
-// @include fixed
-// @include gridCreate(1120px,20px,16)
 @mixin fixed($width:960px, $space:20px, $rows:12)
   @include grid-generator($width, $space, $rows)
+  @include grid-nested-generator
 
 
 // Fluid Grid Generator - with custom create
-// @include fluid
-// @include gridCreate(92%,2%,16)
-@mixin fluid($width:92%, $space:2%, $rows:12)
-  @include grid-fluid-generator($width, $space, $rows)
+@mixin fluid($width:96%, $space:2%, $rows:12)
+  @include grid-generator($width, $space, $rows)
 
 
 // Mobile Grid Generator
-//@include mobile
-@mixin mobile($width:92%, $space:2%)
-  @include grid-generator-mobile($width, $space)
+@mixin mobile
+  @include grid-generator-mobile
+
 
 @mixin gridCreate($width, $space, $rows)
   @include grid-generator($width, $space, $rows)
