--- a/sass/fluid.sass
+++ b/sass/fluid.sass
@@ -1,13 +1,13 @@
 @import "core/base"
-/* -------------------------------------------------------
-	
-	Centurion Framework v.3.1 - FLUID
-	Created by: Justin Hough
-
-	Documentation: http://jhough10.github.com/Centurion/documentation.html
-	Licensed under GPL and MIT.
-	
-// -------------------------------------------------------- */
+/* --------------------------------------------------------
+ *
+ *  Centurion Framework v 3.1 - FLUID
+ *  Created by: Justin Hough
+ *
+ *  Documentation: http://jhough10.github.com/Centurion/documentation.html
+ *  Licensed under GPL and MIT.
+ *
+ * -------------------------------------------------------- */
 
 /* Desktop/Tablet Fluid Grid Layout - 92% */
 @include fluid
