Moved clearfix to separate file

--- a/sass/core/_base.sass
+++ b/sass/core/_base.sass
@@ -2,6 +2,7 @@
 @import "breadcrumbs"
 @import "buttons"
 @import "colors"
+@import "clearfix"
 @import "dropdowns"
 @import "forms"
 @import "grid"
