--- a/css/custom.css
+++ b/css/custom.css
@@ -1,48 +1,76 @@
-/* TYPOGRAPHY */
-p, ul, ol {
-  margin: 10px 0;
+body {
+  font-size: 15px;
 }
 
-ul ul,
-ol ol,
-ul ol,
-ol ul {
+/* TYPOGRAPHY */
+p, ul, ol {
+  margin: 15px 0;
+}
+
+ul ol, ul ul, ol ol, ol ul {
   margin: 0;
 }
 
-/* NAV */
+/* HEADER */
+header {
+  border-bottom: 1px solid #cccccc;
+}
+
 /* CONTENT */
 section {
-  margin: 10px 0;
+  margin: 15px 0;
+}
+
+code {
+  background: #ededed;
+  border: 1px solid #cccccc;
+  display: block;
+  padding: 10px 20px;
+}
+
+/* GRID */
+#grid [class*="grid-"] p {
+  background: #ededed;
+  border: 1px solid #888888;
+  color: #333333;
+  font-size: 0.8em;
+  padding: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+#grid p.noStyle {
+  border: none;
+  background: none;
+  color: #333333;
+  font-size: 16px;
+  padding: 0;
+  text-align: left;
+}
+#grid [class*="pull-"] p {
+  background: lightpink;
+}
+#grid [class*="push-"] p {
+  background: lightgreen;
 }
 
 /* FOOTER */
 footer {
-  background: black;
+  border-top: 1px solid #cccccc;
   min-height: 65px;
   margin-top: 30px;
-  padding: 20px 0 10px 0;
+  padding: 15px 0;
 }
 footer h2 {
-  color: white;
-  display: block;
-  font-family: "Open Sans", sans-serif;
-  font-size: 20px;
-  line-height: 1.5;
-  font-weight: bold;
-  margin: 10px 0;
+  font-size: 1em;
 }
 footer p,
 footer blockquote,
 footer article,
 footer section {
-  color: white;
-  font-family: "Open Sans", sans-serif;
-  font-size: 12px;
-  line-height: 1.5;
+  font-size: 0.8em;
 }
 footer a {
-  color: white;
+  color: #999999;
   white-space: pre;
   white-space: pre-wrap;
   white-space: pre-line;
@@ -53,10 +81,10 @@ footer a {
   word-wrap: break-word;
 }
 footer a:hover {
-  color: #999999;
+  color: white;
 }
 footer a:visited {
-  color: white;
+  color: #999999;
 }
 
 /*  Custom Media Queries  */
