--- a/sass/fluid.sass
+++ b/sass/fluid.sass
@@ -10,7 +10,7 @@
  * -------------------------------------------------------- */
 
 /* Desktop/Tablet Fluid Grid Layout - 92% */
-@include fluid
+@include grid-generate(98%)
 
 @include centerGrid
 
