partial files reworked for smaller initial footprint

--- a/sass/core/_base.sass
+++ b/sass/core/_base.sass
@@ -3,33 +3,14 @@
 @import "buttons"
 @import "colors"
 @import "clearfix"
-@import "dropdowns"
-@import "forms"
 @import "grid"
 @import "images"
 @import "navigation"
 @import "pagination"
 @import "panels"
 @import "print"
-@import "progressbars"
 @import "tables"
 @import "tabs"
+@import "tooltips"
 @import "typography"
-
-// Center a sized element
-@mixin auto-center
-  margin-left: auto
-  margin-right: auto
-
-
-// Float - Left
-// @include left(10px)
-@mixin left($dist:10px)
-  float: left
-  margin-left: $dist
-
-@mixin float-left
-  float: left
-
-@mixin float-right
-  float: right
+@import "vars"
