--- a/sass/core/_images.sass
+++ b/sass/core/_images.sass
@@ -1,38 +1,22 @@
-// @include image-right
-@mixin image-right
-  @include float-right
-  margin: 0 0 15px 15px
-
-// @include image-left
-@mixin image-left
-  @include float-left
-  margin: 0 15px 15px 0
-
-// @include image-frame
-@mixin image-frame
-  border: 1px solid #E0E0E0
-  padding: 5px
-
-// @include image-box
-@mixin image-box
-  padding: 10px
-
-@mixin responsive-images
-  height: auto
-  width: 100%
-
-
 @mixin images
   img.rfloat
-    @include image-right
+    @extend %float-right
+    margin: 0 0 15px 15px
 
   img.lfloat
-    @include image-left
+    @extend %float-left
+    margin: 0 15px 15px 0
 
   img.rfloat.frame,
   img.lfloat.frame,
   img.frame
-    @include image-frame
+    border: 1px solid $grey
+    padding: 5px
     
   img.responsive
-    @include responsive-images
+    height: auto
+    width: 100%
+
+
+
+
