--- a/sass/core/_panels.sass
+++ b/sass/core/_panels.sass
@@ -4,7 +4,7 @@
 @mixin panels
 	.panels
 		padding: 20px 20px 20px 20px
-		background: #F9F9F9
+		background: $almost-white
 		box-shadow: 0 2px 5px rgba(0,0,0,0.15)
 		margin: 0 0 20px 0
 
