--- a/sass/core/_tabs.sass
+++ b/sass/core/_tabs.sass
@@ -1,147 +1,81 @@
 // Tabs
-// @include tabs-base
 @mixin tabs-base
-	[class*="tabs"]
-		&::before,
-		&::after
-			display: block
-			line-height: 0
-			content: ""
-			
-		&::after 
-			clear: both
+  .tabBox
+    margin: 20px 0
+    position: relative
+  
+    [class*="tabs"]
+      &::before,
+      &::after
+        @extend %show-block
+        line-height: 0
+        content: ""
+        
+      &::after 
+        clear: both
+  
+    .tabs
+      border-bottom: 1px solid $border-color
+      margin-bottom: 0
+      width: 100%
+  
+      li
+        border: 1px solid transparent
+        @extend %float-left
+        list-style: none
+        @extend %noMarPad
+        margin-bottom: -1px
+  
+        &:first-child
+          margin-left: 0
+        a
+          @extend %show-block
+          padding: 6px 18px
+  
+          &:hover
+            background: #ededed
+  
+      .active
+        border: none
+        a
+          &,
+          &:hover
+            background: $white
+            color: $text-color
+            border: 1px solid $border-color
+            border-bottom-color: transparent
+            text-decoration: none
+  
+    .innerBox
+      border: 1px solid $border-color
+      border-top: none
+      @extend %show-block
+      padding: 10px 20px
+      p
+        width: 100%
 
 
-	.tabs
-		border-bottom: 1px solid #ccc
-		margin-bottom: 20px
-		width: 100%
-
-		> li
-			border: 1px solid transparent
-			float: left
-			list-style: none
-			margin: 0
-			padding: 0
-			margin-bottom: -1px
-
-			&:first-child
-				margin-left: 0
-
-			> a
-				display: block
-				padding: 6px 18px
-
-				&:hover
-					background: #ededed
-
-
-		> .active
-			border: none
-
-			> a
-				&,
-				&:hover
-					background: #FFF
-					color: #555
-					border: 1px solid #CCC
-					border-bottom-color: transparent
-					text-decoration: none
 
 
 @mixin tabs-bottom
-	/*  TABS BOTTOM */
-	.tabsBottom
-		border-top: 1px solid #ccc
-		
-	.tabsBottom > li
-		border: 1px solid transparent
-		float: left
-		list-style: none
-		margin: 0
-		padding: 0
-		margin-top: -1px
-
-	.tabsBottom > li:first-child
-		margin-left: 0
-
-	.tabsBottom > .active
-		border: none
-
-	.tabsBottom > li > a
-		display: block
-		padding: 6px 18px
-
-
-	.tabsBottom > .active > a,
-	.tabsBottom > .active > a:hover
-		background: #FFF
-		color: #555
-		border: 1px solid #CCC
-		border-top-color: transparent
-		text-decoration: none
-
-
-
-	.tabsBottom > li
-		border: 1px solid transparent
-		float: left
-		list-style: none
-		margin: 0
-		padding: 0
-		margin-bottom: -1px
-
-	.tabsBottom > li:first-child
-		margin-left: 0
-
-	.tabsBottom > li > a
-		display: block
-		padding: 6px 18px
-
-	.tabs > li > a:hover,
-	.tabsBottom > li > a:hover
-		background: #ededed
-
-	.tabs > .active,
-	.tabsBottom > .active
-		border: none
-
-	.tabs > .active > a,
-	.tabs > .active > a:hover
-		background: #FFF
-		color: #555
-		border: 1px solid #CCC
-		border-bottom-color: transparent
-		text-decoration: none
-
-
-
-@mixin tabs-stacked
-	/*  TABS STACKED */
-	.tabsStacked
-		margin: 0
-		padding: 0
-
-	.tabsStacked > li
-		float: none
-		list-style: none
-		margin: 0
-		margin-bottom: -1px
-		padding: 0
-		width: 100%
-
-	.tabsStacked > li > a
-		background: #FFF
-		border: 1px solid #CCC
-		display: block
-		padding: 4px 0
-		text-indent: 10px
-
-	.tabsStacked > li > a:hover
-		background: #EDEDED
-
-	.tabsStacked > .active > a
-		color: #555
-
-	.tabsStacked > .active > a:hover
-		background: #FFF
+  .tabBottom
+    margin-bottom: 60px
+    
+    /*  TABS BOTTOM */
+    .tabs
+      border-bottom: none
+      border-top: 1px solid $border-color
+      position: absolute
+      bottom: -35px
+      left: 0
+  
+      .active
+        margin-top: -1px
+        a,
+        a:hover
+          border-bottom-color: $border-color
+          border-top-color: transparent
+  
+    .innerBox
+      border: 1px solid $border-color
+      border-bottom: none
